--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-demo-app",
-  "homepage": "http://aapu07.github.io/<welcome-ISBC>",
+  "homepage": "http://aapu07.github.io/welcome-ISBC",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
